# volatility-forecasting-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/reports/: baseline_next_day_report.md  baseline_next_week_report.md  bootstrap_error_differences.md  rolling_window_model_ranking.md  subperiod_model_comparison.md
company/: current-state.md  project-charter.md  task-board.md  team-roster.md
company/work-orders/: VFL-001-verify-scaffold-and-first-baseline.md  VFL-002-review-target-construction-and-leakage-risks.md  VFL-003-polish-readme-and-public-readiness-boundary.md  VFL-004-decide-public-github-creation-push.md  VFL-005-add-next-week-target-and-baseline-report.md  VFL-006-add-first-stronger-econometric-baseline.md  VFL-007-add-mit-license.md  VFL-008-build-ml-feature-matrix.md  VFL-009-add-first-scikit-learn-ml-baseline.md  VFL-010-review-ml-comparison-results-and-public-claim-boundary.md  VFL-013-milestone-2-release-readiness-check.md  (+11 more)
configs/: project.yml
docs/: index.md  milestone-2-plan.md  milestone-2-release-readiness.md  milestone-2-summary.md  milestone-3-plan.md  milestone-3-release-readiness.md  milestone-3-summary.md  milestone-4-comparison-review.md  milestone-4-plan.md  milestone-4-release-readiness.md  ml-comparison-review.md  ml-feature-contract.md  public-readiness-review.md  robustness-uncertainty-protocol.md  subperiod-stability-review.md  target-definitions.md  target-leakage-review.md  validation-protocol.md
scripts/: fetch_data.py  run_baseline_evaluation.py
tests/: test_evaluation.py  test_features.py  test_garch_baseline.py
(+6 files in other folders)
